force-app/main/default/objects/Product_Content__c/Product_Content__c.object-meta.xml
<CustomObject>
    <label>Product Content</label>
    <nameField>
        <displayFormat>PC{0000000}</displayFormat>
        <label>Content Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>