force-app/main/default/objects/Product_Content__c/fields/Attachment_Filename__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Filename__c</fullName>
    <label>Attachment Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>