force-app/main/default/objects/Product_Content__c/fields/Attachment_View_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_View_URL__c</fullName>
    <formula>IF(Attachment_Id__c != null,
        IF(TEXT($User.UserType) == &apos;Standard&apos;,  Domain_URL__c+&apos;/&apos; ,  LEFT( $Api.Partner_Server_URL_570 , FIND( &apos;/services&apos;, $Api.Partner_Server_URL_570)) )
        
        + &apos;servlet/servlet.FileDownload?file=&apos;+Attachment_Id__c
        
        , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment View URL</label>
    <type>Text</type>
</CustomField>