force-app/main/default/objects/Product_Content__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Content</relationshipLabel>
    <relationshipName>Product_Content</relationshipName>
    <type>Lookup</type>
</CustomField>