force-app/main/default/objects/Product_Content__c/fields/Video_Link_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_Link_Embed_URL__c</fullName>
    <label>Video Link (Embed URL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>